# delonghi-comfort

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/actions/install-deps/: action.yml
.github/workflows/: publish.yml
delonghi_comfort/: __init__.py  client.py  const.py  discovery.py  exceptions.py  gigya.py  models.py  mqtt.py  rest.py
tests/: fakes.py  test_client.py  test_discovery.py  test_gigya.py  test_models.py  test_mqtt.py  test_mqtt_robustness.py  test_rest.py
