[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "delonghi-comfort"
description = "Async Python client for De'Longhi 'My Comfort Hub' (Daedalus) connected heaters"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Shaun Eccles-Smith", email = "shauneccles@gmail.com" }]
keywords = ["delonghi", "comfort", "heater", "home-assistant", "aws-iot", "daedalus"]
dynamic = ["version"]
dependencies = [
    "aiohttp>=3.9",
    "aiomqtt>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/shauneccles/delonghi-comfort"
Repository = "https://github.com/shauneccles/delonghi-comfort"
Issues = "https://github.com/shauneccles/delonghi-comfort/issues"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "mypy>=1.16.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24",
    "ruff>=0.12.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Never fail a build when the repo has no tags yet (e.g. fresh checkout / CI without history).
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["delonghi_comfort"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
required-version = ">=0.11.0"
target-version = "py312"

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint]
select = [
    "A001", # Variable {name} is shadowing a Python builtin
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "BLE",
    "C", # complexity, including flake8-comprehensions
    "COM818", # Trailing comma on bare tuple prohibited
    "D", # flake8-docstrings
    "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
    "E", # pycodestyle
    "F", # pyflakes/autoflake
    "FLY", # flynt
    "FURB", # refurb
    "G", # flake8-logging-format
    "I", # isort
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "ICN001", # import concentions; {name} should be imported as {asname}
    "LOG", # flake8-logging
    "N804", # First argument of a class method should be named cls
    "N805", # First argument of a method should be named self
    "N815", # Variable {name} in class scope should not be mixedCase
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF005", # Consider iterable unpacking instead of concatenation
    "RUF006", # Store a reference to the return value of asyncio.create_task
    "RUF010", # Use explicit conversion flag
    "RUF013", # PEP 484 prohibits implicit Optional
    "RUF017", # Avoid quadratic list summation
    "RUF018", # Avoid assignment expressions in assert statements
    "RUF019", # Unnecessary key check before dictionary access
    "S102", # Use of exec detected
    "S103", # bad-file-permissions
    "S108", # hardcoded-temp-file
    "S306", # suspicious-mktemp-usage
    "S307", # suspicious-eval-usage
    "S313", # suspicious-xmlc-element-tree-usage
    "S314", # suspicious-xml-element-tree-usage
    "S315", # suspicious-xml-expat-reader-usage
    "S316", # suspicious-xml-expat-builder-usage
    "S317", # suspicious-xml-sax-usage
    "S318", # suspicious-xml-mini-dom-usage
    "S319", # suspicious-xml-pull-dom-usage
    "S601", # paramiko-call
    "S602", # subprocess-popen-with-shell-equals-true
    "S604", # call-with-shell-equals-true
    "S608", # hardcoded-sql-expression
    "S609", # unix-command-wildcard-injection
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "T100", # Trace found: {name} used
    "TCH", # flake8-type-checking
    "TID251", # Banned imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "E501", # line too long
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLW2901", # Outer variable overwritten by inner target
    "TRY003", # Avoid specifying long messages outside the exception class
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
# Tests are white-box (reach into internals) and don't need docstrings.
"tests/**/*" = ["SLF001", "D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_no_return = true
warn_unreachable = true

[tool.codespell]
quiet-level = 2
skip = "uv.lock,./.git/*,./.mypy_cache/*,*.json"
ignore-words-list = "hass"
